Финальная версия кода
